--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -13,11 +13,12 @@
 
 html {
     max-width: 100vw;
+    height: 100vh;
     box-sizing: border-box;
     background-image: url('https://www.skyroom.online/wp-content/uploads/2019/02/Christmas-Floral-wedding-5-1.jpg?id=444');
     background-size: cover;
     background-position: center;
-
+    
   }
 
   h1 { 
@@ -28,6 +29,8 @@ html {
   
   @layer components {
     .glass-box { 
+      width: 100%;
+      height:100vh;
       background: rgba( 255, 255, 255, 0.25 );
       box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
       backdrop-filter: blur( 2.5px );
@@ -35,7 +38,7 @@ html {
       
       border-radius: 10px;
       font-family: 'Baloo Bhaijaan 2', cursive;
-
+     
     }
 
     .img-absolute { 
