--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -24,8 +24,24 @@ html {
   h1 { 
     font-size: 20px;
   }
-  
+  input { 
+    text-align: center;
+    outline: none;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
 
+  textarea {
+    border: none;
+    overflow: auto;
+    outline: none;
+
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+
+    resize: none; 
+}
   
   @layer components {
     .glass-box { 
